Closed
Bug 1656705
Opened 5 years ago
Closed 5 years ago
bustage: /builds/worker/checkouts/gecko/comm/mailnews/base/src/nsMsgContentPolicy.cpp:841:5: error: ignoring return value of function declared with 'warn_unused_result' attribute [-Werror,-Wunused-result]
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(thunderbird_esr78 unaffected, thunderbird80 unaffected)
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
thunderbird_esr78 | --- | unaffected |
thunderbird80 | --- | unaffected |
People
(Reporter: mkmelin, Assigned: mkmelin)
Details
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
Don't know what setting I'd have to turn on locally to get this error.
Sent the likely fix to try: https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=fb9a0761c700b78bce933197c762f6ae0dcd1c77
(unless there's more)
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/989c0fab28ba
don't ignore rv of browsingContext->SetSandboxFlags. rs=bustage-fix DONTBUILD
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•5 years ago
|
status-thunderbird80:
--- → unaffected
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
Assignee: nobody → mkmelin+mozilla
You need to log in
before you can comment on or make changes to this bug.
Description
•