Bug 1656705 - don't ignore rv of browsingContext->SetSandboxFlags. rs=bustage-fix DONTBUILD

bustage: /builds/worker/checkouts/gecko/comm/mailnews/base/src/nsMsgContentPolicy.cpp:841:5: error: ignoring return value of function declared with 'warn_unused_result' attribute [-Werror,-Wunused-result]